<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_weight"  android:icon="@drawable/ic_weight"     android:title="@string/nav_weight" />
    <item android:id="@+id/nav_blood"   android:icon="@drawable/ic_blood"      android:title="@string/nav_blood" />
    <item android:id="@+id/nav_intake"  android:icon="@drawable/ic_intake"       android:title="@string/nav_intake" />
    <item android:id="@+id/nav_diet"    android:icon="@drawable/ic_diet"       android:title="@string/nav_diet" />
    <item android:id="@+id/nav_meds"    android:icon="@drawable/ic_meds"       android:title="@string/nav_meds" />
    <item android:id="@+id/nav_profile" android:icon="@drawable/ic_profile"    android:title="@string/nav_profile" />
</menu>
